fixed media location on mobile

--- a/assets/styles/sections/hero-section.scss
+++ b/assets/styles/sections/hero-section.scss
@@ -119,7 +119,7 @@
 	&__media {
 		position: absolute;
 		bottom: 56px;
-		right: 65px;
+		right: 20px;
 	}
 
 	.media {
@@ -287,6 +287,10 @@
 			}
 			display: flex;
 			flex: 1 1 100%;
+		}
+
+		&__media{
+			right: 65px;
 		}
 	}
 }
